ADD - ui styles and material design

--- a/productcatalogmanagement.client/src/components/products/products.component.html
+++ b/productcatalogmanagement.client/src/components/products/products.component.html
@@ -1,30 +1,38 @@
 <div>
   <h2>Product List</h2>
-  <button (click)="newProduct()">New Product</button>
+  <button mat-raised-button color="primary" (click)="newProduct()" class="button-new">New Product</button>
+  <br/>
   <ul>
     <li *ngFor="let product of products$ | async" (click)="selectProduct(product)">
       {{ product.name }} - {{ product.price | currency }}
-      <button (click)="deleteProduct(product.id); $event.stopPropagation()">Delete</button>
+      <button mat-button color="warn" class="button-cancel" (click)="deleteProduct(product.id); $event.stopPropagation()">Delete</button>
     </li>
   </ul>
 </div>
 
 <div *ngIf="selectedProduct">
-  <h2>{{ selectedProduct.id ? 'Edit' : 'New' }} Product</h2>
-  <form (ngSubmit)="saveProduct()">
-    <label>
-      Name:
-      <input [(ngModel)]="selectedProduct.name" name="name" required>
-    </label>
-    <label>
-      Price:
-      <input [(ngModel)]="selectedProduct.price" name="price" type="number" required>
-    </label>
-    <label>
-      Description:
-      <textarea [(ngModel)]="selectedProduct.description" name="description"></textarea>
-    </label>
-    <button type="submit">Save</button>
-    <button type="button" (click)="cancel()">Cancel</button>
-  </form>
+  <mat-card class="form-card">
+    <mat-card-title>{{ selectedProduct.id ? 'Edit' : 'New' }} Product</mat-card-title>
+    <br />
+    <mat-card-content>
+      <form (ngSubmit)="saveProduct()">
+        <mat-form-field appearance="fill" class="mdc-text-field">
+          <br />
+          <mat-label>Name</mat-label>
+          <br />
+          <input matInput [(ngModel)]="selectedProduct.name" name="name" required>
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="mdc-text-field">
+          <mat-label>Price</mat-label>
+          <input matInput type="number" [(ngModel)]="selectedProduct.price" name="price" required>
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="mdc-text-field">
+          <mat-label>Description</mat-label>
+          <textarea matInput [(ngModel)]="selectedProduct.description" name="description"></textarea>
+        </mat-form-field>
+        <button  mat-raised-button color="success" class="button-save" type="submit">Save</button>
+        <button mat-button type="button" class="button-cancel" (click)="cancel()">Cancel</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
